[package]
name = "esdt-nft-marketplace"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/marketplace_main.rs"
[dependencies.multiversx-sc]
version = "0.39.4"

[dependencies.multiversx-sc-modules]
version = "0.39.4"
[dev-dependencies.multiversx-sc-scenario]
version = "0.39.4"
