[package]
name = "esdt-nft-marketplace-wasm"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.esdt-nft-marketplace]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.4"

[workspace]
members = ["."]
