[package]
name = "seller-contract-mock-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = ["Dorin Iancu <dorin.iancu@elrond.com>"]

[dev-dependencies]

[dependencies.seller-contract-mock]
path = ".."

[dependencies.elrond-wasm]
version = "0.27.4"

[dependencies.elrond-wasm-debug]
version = "0.27.4"
