[package]
name = "seller-contract-mock-wasm"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.seller-contract-mock]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.4"
